--- a/packages/react/src/styles/app.module.scss
+++ b/packages/react/src/styles/app.module.scss
@@ -1,6 +1,7 @@
 @import './colors.scss';
 
 .app {
+	font-family: 'KaTeX_Main';
 	:global .hstack {
 		display: flex;
 	}
@@ -14,8 +15,9 @@
 	table {
 		border-collapse: collapse;
 		width: fit-content;
-		max-width: 50vw;
+		max-width: 70vw;
 		margin: 0 auto;
+		font-size: 0.9rem;
 
 		thead {
 			border-bottom: solid thin $ash;
@@ -77,7 +79,6 @@
 		overflow-y: scroll;
 		overflow-x: hidden;
 		background-color: rgb(44, 44, 44);
-		font-size: 1.1rem;
 		position: absolute;
 		top: 30px;
 		height: 100%;
@@ -87,7 +88,6 @@
 	}
 
 	color: $text;
-	font-family: 'KaTeX_Main';
 
 	h1,
 	h2,
@@ -131,18 +131,17 @@
 	dfn {
 		display: block;
 		font-style: normal;
-		margin: 1em auto;
+		margin: 2em auto;
+		padding: 0.5em 0.7em;
+		border: solid thin #965042;
 		strong {
-			color: rgb(251, 136, 113);
+			color: #fb8871;
 		}
 		del {
 			font-style: normal;
 			text-decoration: underline;
 			font-variant: small-caps;
 		}
-
-		padding: 0 0.9em;
-
 		section {
 			margin: 0;
 		}
@@ -183,29 +182,12 @@
 		margin-top: 0.3em;
 	}
 
-	h1 {
-		font-size: 1.8rem;
-	}
-
-	h2 {
-		font-size: 1.6rem;
-	}
-
-	h3 {
-		font-size: 1.4rem;
-	}
-
-	h4 {
-		font-size: 1.2rem;
-	}
-
-	h5 {
-		font-size: 1.1rem;
-	}
-
-	h6 {
-		font-size: 1rem;
-	}
+	h1 { font-size: 1.7rem; }
+	h2 { font-size: 1.4rem; }
+	h3 { font-size: 1.3rem; }
+	h4 { font-size: 1.2rem; }
+	h5 { font-size: 1.1rem; }
+	h6 { font-size: 1rem; }
 
 	h2,
 	h3,
